Migrate to Graal Truffle